--- a/Bai02/html/index.html
+++ b/Bai02/html/index.html
@@ -31,12 +31,45 @@
                     <h2 class="head">Sky World</h2>
                 </lu>
             </nav>
+            <div class="line"></div>
         </header>
         <div class="container">
-            <p class="content">
-                Nội dung
-            </p>
-            <img class="img-content" src="" alt="">
+            <div class="content">
+                <h3 class="content-head">Registration information</h3>
+                <p class="content-p">
+                    Start your travel planning right now with our on line tour registration form. Just tell us a little about yourself and your group and one of our travel experts will contact you to create the perfect tour package custom built for your group's needs.
+                </p>
+                <div class="content-input">
+                    <li class="input">
+                        <h6 class="name-input">Title</h6>
+                        <input class="input-text" type="text">
+                    </li>
+                    <li class="input">
+                        <h6 class="name-input">First Name</h6>
+                        <input class="input-text" type="text" placeholder="First Name">
+                    </li>
+                    <li class="input">
+                        <h6 class="name-input">Mailing Address</h6>
+                        <input class="input-text" type="text" placeholder="Mailing Address">
+                    </li>
+                    <li class="input">
+                        <h6 class="name-input">City</h6>
+                        <input class="input-text" type="text" placeholder="City">
+                    </li>
+                    <li class="input">
+                        <h6 class="name-input">Country</h6>
+                        <input class="input-text" type="text" placeholder="Country">
+                    </li>
+                    <li class="input">
+                        <h6 class="name-input">Specific questions or requests about your tour</h6>
+                        <textarea class="input-text input-text-specific" type="text" placeholder="Specific questions or requests about your tour"></textarea>
+                    </li>
+                </div>
+            </div>
+            <div class="content-img">
+                <img class="img-content" src="/Bai02/img/Anh1.png" alt="">
+                <h3 class="name-img">You've arrived.</h3>
+            </div>
         </div>
         <footer>
 
