--- a/Bai02/html/index.html
+++ b/Bai02/html/index.html
@@ -65,6 +65,10 @@
                         <textarea class="input-text input-text-specific" type="text" placeholder="Specific questions or requests about your tour"></textarea>
                     </li>
                 </div>
+                <li class="button">
+                    <button class="button-text">Submit</button>
+                    <button class="button-text">Reset</button>
+                </li>
             </div>
             <div class="content-img">
                 <img class="img-content" src="/Bai02/img/Anh1.png" alt="">
@@ -72,9 +76,9 @@
             </div>
         </div>
         <footer>
-
+            <div class="line"></div>
+            <p class="text">Sky World Tours. All rights reserved.</p>
         </footer>
-    </div>
     </div>
 </body>
 
