--- a/Bai03/html/index.html
+++ b/Bai03/html/index.html
@@ -9,7 +9,120 @@
 </head>
 
 <body>
+    <header id="header">
+        <div class="head-logo">
+            <img class="logo-img" src="../img/logo.avif" alt="">
+            <h1 class="logo-text">
+                FlowerBox 360
+            </h1>
+        </div>
 
+        <div class="search">
+            <input type="text" class="text-search" placeholder="Search the site...">
+        </div>
+
+        <nav class="menu">
+            <ul class="nav-links">
+                <li class="links"><a href="#">Home</a></li>
+                <li class="links"><a href="#">Promotion</a></li>
+                <li class="links"><a href="#">Gift Baskets</a></li>
+                <li class="links"><a href="#">Flower Services</a></li>
+                <li class="links"><a href="#">About</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div id="container">
+        <div class="content">
+            <h5 class="title">
+                Why Not Contact Us Today!
+            </h5>
+            <div class="line"></div>
+
+            <div class="content-box">
+                <div class="content-input">
+                    <p class="title-input">
+                        For FlowerBox 360 shoppers, that means not only can you send your friends and loved ones the highest quality flowers found on online, but that you can do so at a great value.
+                    </p>
+
+                    <ul class="input-lists">
+                        <li class="list-input">
+                            Name:
+                            <input class="input" type="text">
+                        </li>
+                        <li class="list-input">
+                            Email:
+                            <input class="input" type="text">
+                        </li>
+                        <li class="list-input">
+                            Telephone:
+                            <input class="input" type="text">
+                        </li>
+                        <li class="list-input">
+                            Subject:
+                            <input class="input" type="text">
+                        </li>
+                        <li class="list-input list-message">
+                            Message:
+                            <textarea class="input input-message" type="text"></textarea>
+                        </li>
+                        <li class="list-button">
+                            <button class="button">Submit</button>
+                            <button class="button">Reset</button>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="content-text">
+                    <h6 class="text-title">
+                        FlowerBox 360 Info!
+                    </h6>
+                    <div class="line"></div>
+
+                    <p class="text-content">Operating Hours:
+                        Monday-Friday: 9.00am-5.00pm,
+                        Saturday: 9.00am-1.00pm,
+                        Sunday: Closed (No Delivery)
+                        ORDERS ONLINE 24/7
+
+                    </p>
+                    <p class="text-content">Software Engineering Dept.
+                        Information Technology Faicuty
+                        First Floor, H Buliding
+
+                    </p>
+                    <p class="text-content">12 Nguyen Van Bao St., Ward 4
+                        Go Vap District
+                        Ho Chi Minh City
+                        Tel: 0283 8940 390
+                        Fax: 0283.9940 954
+
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="aside">
+            <div class="aside-box">
+                <h6 class="aside-title">
+                    Discounts & Specials
+                </h6>
+                <div class="line"></div>
+
+                <div class="aside-img">
+                    <img src="../img/Anh1.jpg" alt="" class="img">
+                </div>
+
+                <p class="aside-text">
+                    FlowerBox 360 offers many great discounts throughout the year, from coupons and coupon codes, to promo codes and other savings. We also offer military flower discounts to our wonderful troops!
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <footer id="footer">
+        <p class="footer-text">Software Engineering Department - Industrial University of Ho Chi Minh City</p>
+    </footer>
 </body>
 
 </html>
