--- a/Bai03/html/index.html
+++ b/Bai03/html/index.html
@@ -79,13 +79,13 @@
                     </h6>
                     <div class="line"></div>
 
-                    <p class="text-content">Operating Hours: Monday-Friday: 9.00am-5.00pm, Saturday: 9.00am-1.00pm, Sunday: Closed (No Delivery) ORDERS ONLINE 24/7
+                    <p class="text-content">Operating Hours:<br>Monday-Friday: 9.00am-5.00pm,<br>Saturday: 9.00am-1.00pm,<br>Sunday: Closed (No Delivery)<br>ORDERS ONLINE 24/7
 
                     </p>
-                    <p class="text-content">Software Engineering Dept. Information Technology Faicuty First Floor, H Buliding
+                    <p class="text-content">Software Engineering Dept.<br>Information Technology Faicuty<br>First Floor, H Buliding
 
                     </p>
-                    <p class="text-content">12 Nguyen Van Bao St., Ward 4 Go Vap District Ho Chi Minh City Tel: 0283 8940 390 Fax: 0283.9940 954
+                    <p class="text-content">12 Nguyen Van Bao St.,<br>Ward 4 Go Vap District<br>Ho Chi Minh City<br>Tel: 0283 8940 390<br>Fax: 0283.9940 954
 
                     </p>
                 </div>
